fix z-index issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -381,7 +381,7 @@ select::-webkit-scrollbar-thumb:hover {
 
 
 .react-date-range-custom-styles{
-  z-index: 99999 !important;
+  z-index: 9999 !important;
   position: relative !important;
   
 
